feat: this function allows users to suggest template modifications and create the interface